2001-10-07  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp.c (EPSILON): Set to zero if new intersector is
	in use - we want svp's to be in strict sorted order.

	* art_svp_intersect.c (art_svp_intersect_test_cross): Explicitly
	check that top points are equal, and swap immediately if b is out
	of order.
	(art_svp_intersect_horiz): Break segments that intersect
	horizontal lines. Now passes "two squares with offset" test.

2001-10-05  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c: Major changes to accommodate
	horizontal lines. Intersections of horizontal lines
	aren't fully processed, but should work a lot better
	than before.

	* testart.c: Minor tweaks. testpat now frees memory
	so it can be run under memprof to detect leaks.

2001-10-03  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_advance_cursor):
	Made test_cross for inserted segments common between
	intersection processing and cursor advance, and also took
	care of a case that hadn't been handled before. Also added
	invariant sanitychecker for debugging purposes.

2001-10-02  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_ops.c: ART_USE_NEW_INTERSECTOR variants of svp
	ops changed to do shallow free of merged svp.

2001-10-01  Raph Levien  <raph@acm.org>

	* art_svp_intersect.c:
	* art_svp_intersect.h:
	* Makefile.am:
	* art_misc.h:
	* art_svp_wind.h: First commit of new intersector code. It is
	  turned off by default, but can be enabled by #defining
	  ART_USE_NEW_INTERSECTOR in art_misc.h.

	* art_svp_ops.c: Make svp ops use new intersector if enabled.

	* art_svp_vpath_stroke.c: Make vpath stroking use new intersector
	if enabled.
	
	* testart.c: New test case for intersector.

Wed Sep 26 03:48:13 2001  George Lebl <jirka@5z.com>

	* Release 2.3.6

Wed Sep 26 03:11:40 2001  George Lebl <jirka@5z.com>

	* gen_art_config.c: Fix 64bit issues, cast sizeof return when
	  using %d to print it.

2001-09-13  Havoc Pennington  <hp@redhat.com>
